--- a/src/pages/project6_military.html
+++ b/src/pages/project6_military.html
@@ -37,43 +37,43 @@
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
       <!-- thumb1 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
-        <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-toggle="mfitModal1">
+        <img src="../assets/img/project-page-gallery/small/mfit1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
+      <div class="reveal" id="mfitModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/mfit1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
               <span aria-hidden="true">&times;</span>
             </button>
       </div>
       <!-- thumb2 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal2">
-        <img src="../assets/img/project-page-gallery/small/thevue2_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-toggle="mfitModal2">
+        <img src="../assets/img/project-page-gallery/small/mfit2_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/thevue2_large.jpg" class="thumbnail">
+      <div class="reveal" id="mfitModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/mfit2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
             </button>
       </div>
       <!-- thumb3 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal3">
-        <img src="../assets/img/project-page-gallery/small/thevue3_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-toggle="mfitModal3">
+        <img src="../assets/img/project-page-gallery/small/mfit3_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="reveal" id="thevueModal3" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/thevue3_large.jpg" class="thumbnail">
+      <div class="reveal" id="mfitModal3" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/mfit3_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
             </button>
       </div>
       <!-- thumb4 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal4">
-        <img src="../assets/img/project-page-gallery/small/thevue4_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-toggle="mfitModal4">
+        <img src="../assets/img/project-page-gallery/small/mfit2_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="reveal" id="thevueModal4" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/thevue4_large.jpg" class="thumbnail">
+      <div class="reveal" id="mfitModal4" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/mfit2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
             </button>
