--- a/src/pages/project8.html
+++ b/src/pages/project8.html
@@ -90,7 +90,7 @@
         <div class="project-spec">
 
           <ul class="no-bullet">
-            <li><i class="fa fa-user"></i>Client: <a href="http://vueon5thhoa.com/">The Vue on 5th Ave</a></li>
+            <li><i class="fa fa-user"></i>Client: <a href="#">Project 8</a></li>
 
             <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
