--- a/src/pages/project5_water.html
+++ b/src/pages/project5_water.html
@@ -91,7 +91,7 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://vueon5thhoa.com/">The Vue on 5th Ave</a></li>
+          <li><i class="fa fa-user"></i>Client: <a href="http://wateroflifecc.org/">Water of Life Community Church</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
