--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,9 +6,9 @@
 
   <div class="hero hero-bg-image">
     <div class="hero-content">
-      <h1 class="hero-title">Thunder Jones Contracting Group, Inc.</h1>
-      <h3 class="hero-title">Commercial and Structural Concrete</h3>
-      <p class="hero-description hide-for-small-only">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor ante, varius eget lacinia porta, faucibus ut eros. Donec quis dui id felis pharetra fermentum.</p>
+      <h1 class="hero-title">Thunder - Jones</h1>
+      <h3 class="hero-title hero-sub">Contracting Group, Inc</h3>
+      <p class="hero-description hide-for-small-only">Commercial and Structural Concrete Construction</p>
       <div class="hero-ctas">
         <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
         <a href="#contact" class="hero-section-cta button" data-smooth-scroll>Contact</a>
@@ -120,7 +120,10 @@
   </div>
 </section>
 
-<!-- current projects section -->
+
+<!-- /why us section -->
+
+<!-- projects section -->
 
 <section id="projects" data-magellan-target="projects">
   <!-- main page gallery partial -->
@@ -129,29 +132,6 @@
 </section>
 <!-- /projects Section-->
 
-<!-- partners section -->
-<section class="partners">
-  <div class="medium-12 cell">
-    <h3 class="text-center">Our Partners</h3>
-    <hr>
-    <div>
-
-      <div class="grid-x small-up-2 large-up-4 text-center">
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
-        </div>
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
-        </div>
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
-        </div>
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
-        </div>
-      </div>
-    </div>
-</section>
 
 <!-- our team section -->
 
@@ -197,6 +177,32 @@
     </div>
   </div>
 </section>
+<!-- /our team section -->
+
+<!-- partners section -->
+<section class="partners">
+  <div class="medium-12 cell">
+    <h3 class="text-center">Our Partners</h3>
+    <hr>
+    <div>
+
+      <div class="grid-x small-up-2 large-up-4 text-center">
+        <div class="cell column-block">
+          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        </div>
+        <div class="cell column-block">
+          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        </div>
+        <div class="cell column-block">
+          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        </div>
+        <div class="cell column-block">
+          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        </div>
+      </div>
+    </div>
+</section>
+<!-- partners section -->
 
 <!-- contact section partial -->
 {{> contact }}
