clients section side idea
client update side idea

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -181,26 +181,58 @@
 
 <!-- partners section -->
 <section class="partners">
-  <div class="medium-12 cell">
-    <h3 class="text-center">Our Partners</h3>
-    <hr>
-    <div>
 
-      <div class="grid-x small-up-2 large-up-4 text-center">
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+  <div class="grid-x">
+    <div class="medium-12 cell">
+      <h3 class="text-center">Our Clients</h3>
+      <hr>
+      <h4 class="text-center">Check out some of our Awesome Clients</h4>
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maybe we can add you to our list of awesomeness</p>
+    </div>
+
+
+  </div>
+
+  <div id="partners-container">
+    <div id="partners-container-content">
+      <div class="links">
+        <div class="link-column">
+          <ul class="menu vertical">
+            <li><a href="#">Solar Turbines, Inc.</a></li>
+            <li><a href="#">General Atomics</a></li>
+            <li><a href="#">Northrop Grummann</a></li>
+            <li><a href="#">U.S. Air Force</a></li>
+          </ul>
         </div>
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        <div class="link-column">
+          <ul class="menu vertical">
+            <li><a href="#">Qualcomm</a></li>
+            <li><a href="#">Genetech</a></li>
+            <li><a href="#">Pfizer</a></li>
+            <li><a href="#">SAIC</a></li>
+          </ul>
         </div>
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        <div class="link-column">
+          <ul class="menu vertical">
+
+            <li><a href="#">University of California</a></li>
+            <li><a href="#">Cal State University</a></li>
+            <li><a href="#">San Diego Community College District</a></li>
+            <li><a href="#">U.S. Navy</a></li>
+          </ul>
         </div>
-        <div class="cell column-block">
-          <img src="https://placehold.it/220x150" class="thumbnail" alt="">
+        <div class="link-column">
+          <ul class="menu vertical">
+            <li><a href="#">Vista Medical Center</a></li>
+            <li><a href="#">T&C Hotel Mission Valley</a></li>
+            <li><a href="#">Broadstone Little Italy</a></li>
+            <li><a href="#">Encinitas Pacific Station</a></li>
+          </ul>
         </div>
       </div>
     </div>
+  </div>
+
 </section>
 <!-- partners section -->
 
