--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -189,19 +189,19 @@
       <h4 class="text-center">Check out some of our Awesome Clients</h4>
       <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maybe we can add you to our list of awesomeness</p>
     </div>
-
-
   </div>
 
   <div id="partners-container">
     <div id="partners-container-content">
       <div class="links">
+
         <div class="link-column">
           <ul class="menu vertical">
-            <li><a href="#">Solar Turbines, Inc.</a></li>
+
             <li><a href="#">General Atomics</a></li>
             <li><a href="#">Northrop Grummann</a></li>
             <li><a href="#">U.S. Air Force</a></li>
+            <li><a href="#">U.S. Navy</a></li>
           </ul>
         </div>
         <div class="link-column">
@@ -216,19 +216,21 @@
           <ul class="menu vertical">
 
             <li><a href="#">University of California</a></li>
-            <li><a href="#">Cal State University</a></li>
-            <li><a href="#">San Diego Community College District</a></li>
-            <li><a href="#">U.S. Navy</a></li>
+            <li><a href="#">California State University</a></li>
+
+            <li><a href="#">San Diego Community College</a></li>
+            <li><a href="#">Solar Turbines, Inc.</a></li>
           </ul>
         </div>
         <div class="link-column">
           <ul class="menu vertical">
-            <li><a href="#">Vista Medical Center</a></li>
+            <li><a href="#">Vista Community Medical Center</a></li>
             <li><a href="#">T&C Hotel Mission Valley</a></li>
             <li><a href="#">Broadstone Little Italy</a></li>
-            <li><a href="#">Encinitas Pacific Station</a></li>
+            <li><a href="#">Pacific Station Encinitas</a></li>
           </ul>
         </div>
+
       </div>
     </div>
   </div>
