--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="media-object-section">
-          <h4 class="text-center">Brian Jones | Partner</h4>
+          <h4 class="text-center">Jesse Siao | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci
             veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
@@ -168,7 +168,7 @@
           </div>
         </div>
         <div class="media-object-section">
-          <h4 class="text-center">Kevin Thunder | Partner</h4>
+          <h4 class="text-center">Michelle Day | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium error
             adipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
