--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -154,8 +154,7 @@
         </div>
         <div class="media-object-section">
           <h4 class="text-center">Jesse Siao | Partner</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci
-            veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repellendus, dignissimos autem molestias alias laboriosam. veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
         </div>
       </div>
@@ -169,8 +168,7 @@
         </div>
         <div class="media-object-section">
           <h4 class="text-center">Michelle Day | Partner</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium error
-            adipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci Lorem ipsum dolor sit.</p>
 
         </div>
       </div>
