--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="media-object-section">
-          <h4 class="text-center">Jesse Siao | Partner</h4>
+          <h4 class="text-center">Brian Thunder | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repellendus, dignissimos autem molestias alias laboriosam. veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
         </div>
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="media-object-section">
-          <h4 class="text-center">Michelle Day | Partner</h4>
+          <h4 class="text-center">Kevin Jones | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci Lorem ipsum dolor sit.</p>
 
         </div>
