Edits from Word doc

--- a/src/pages/project2_tc.html
+++ b/src/pages/project2_tc.html
@@ -90,7 +90,7 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="https://www.destinationhotels.com/town-country">Town & Country Hotel</a></li>
+          <li><i class="fa fa-user"></i>Client: <a href="https://www.destinationhotels.com/town-country" target="_blank">Town & Country Hotel</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
