--- a/src/pages/project3_broad.html
+++ b/src/pages/project3_broad.html
@@ -92,7 +92,7 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://broadstonelittleitaly.com/">Broadstone Little Italy</a></li>
+          <li><i class="fa fa-user"></i>Client: <a href="http://broadstonelittleitaly.com/" target="_blank">Broadstone Little Italy</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
@@ -109,7 +109,7 @@
     <div class="medium-6 large-8 cell">
       <div class="project-overview">
 
-        <p class="text-left">This location is one of San Diego's newest luxury residencies in Little Italy. The structural concrete for this project required 167,000 ft&sup2 cast-in-place construction for a 10 level mid-rise condominium building. Four level cast-in-place
+        <p class="text-left">This location is one of San Diego's newest luxury residencies in Little Italy. Four level cast-in-place
           218,000 sq foot mixed use project (parking, shopping, condos)</p>
 
       </div>
