--- a/src/pages/project4_vista.html
+++ b/src/pages/project4_vista.html
@@ -90,7 +90,7 @@
         <div class="project-spec">
 
           <ul class="no-bullet">
-            <li><i class="fa fa-user"></i>Client: <a href="http://www.vistacommunityclinic.org/locations/">Vista Community Medical Center</a></li>
+            <li><i class="fa fa-user"></i>Client: <a href="http://www.vistacommunityclinic.org/locations/" target="_blank">Vista Community Medical Center</a></li>
 
             <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
