--- a/src/pages/project6_military.html
+++ b/src/pages/project6_military.html
@@ -91,7 +91,7 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="#">Military Fitness Center</a></li>
+          <li><i class="fa fa-user"></i>Client: <a href="#" target="_blank">Military Fitness Center</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
