--- a/src/pages/project7_pac.html
+++ b/src/pages/project7_pac.html
@@ -91,7 +91,7 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://pacificstationcondos.com">Pacific Station</a></li>
+          <li><i class="fa fa-user"></i>Client: <a href="http://pacificstationcondos.com" target="_blank">Pacific Station</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: Encinitas, CA</li>
 
