--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -92,7 +92,7 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://vueon5thhoa.com/">The Vue on 5th Ave</a></li>
+          <li><i class="fa fa-user"></i>Client: <a href="http://vueon5thhoa.com/" target="_blank">The Vue on 5th Ave</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
