updated of projects pages and ui
updated of projects pages and ui

--- a/src/pages/project8_alta.html
+++ b/src/pages/project8_alta.html
@@ -2,7 +2,7 @@
 <section class="project-name">
   <div class="grid-x">
     <div class="medium-12 cell">
-      <h3 class="text-center">Project 8 </h3>
+      <h3 class="text-center">Alta 1919</h3>
       <hr>
     </div>
   </div>
@@ -15,7 +15,7 @@
       <ul class="breadcrumbs">
         <li><a href="index.html#home">Home</a></li>
         <li><a href="index.html#projects">Projects</a></li>
-        <span class="show-for-sr">Current: </span> Project 8
+        <span class="show-for-sr">Current: </span> Alta 1919
         </li>
       </ul>
     </nav>
@@ -37,42 +37,42 @@
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
       <!-- thumb1 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
+      <div class="cell small-6 medium-3 auto" data-toggle="pacModal1">
         <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+      <div class="reveal" id="pacModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
               <span aria-hidden="true">&times;</span>
             </button>
       </div>
       <!-- thumb2 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal2">
+      <div class="cell small-6 medium-3 auto" data-toggle="pacModal2">
         <img src="../assets/img/project-page-gallery/small/thevue2_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+      <div class="reveal" id="pacModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
             </button>
       </div>
       <!-- thumb3 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal3">
+      <div class="cell small-6 medium-3 auto" data-toggle="pacModal3">
         <img src="../assets/img/project-page-gallery/small/thevue3_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="reveal" id="thevueModal3" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+      <div class="reveal" id="pacModal3" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue3_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
             </button>
       </div>
       <!-- thumb4 -->
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal4">
+      <div class="cell small-6 medium-3 auto" data-toggle="pacModal4">
         <img src="../assets/img/project-page-gallery/small/thevue4_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="reveal" id="thevueModal4" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+      <div class="reveal" id="pacModal4" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue4_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
@@ -81,35 +81,38 @@
 
     </div>
   </div>
+</div>
 
-  <!-- Project Description and Overview -->
-  <section class="project">
+<!-- Project Description and Overview -->
+<section class="project">
 
-    <div class="grid-x">
-      <div class="medium-6 large-4 cell">
-        <div class="project-spec">
+  <div class="grid-x">
+    <div class="medium-6 large-4 cell">
+      <div class="project-spec">
 
-          <ul class="no-bullet">
-            <li><i class="fa fa-user"></i>Client: <a href="#" target="_blank">Project 8</a></li>
+        <ul class="no-bullet">
+          <li><i class="fa fa-user"></i>Client: <a href="#" target="_blank">Alta 1919</a></li>
 
-            <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
+          <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
-            <li><i class="fa fa-arrows-alt"></i> Surface Area: 167,000 ft&sup2</li>
+          <li><i class="fa fa-arrows-alt"></i> Surface Area: 199,000 ft&sup2</li>
 
-            <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
-            <br>
+          <li><i class="fa fa-calendar"></i> Year Completed: 2017</li>
+          <br>
 
-          </ul>
+        </ul>
 
-        </div>
-      </div>
-
-      <div class="medium-6 large-8 cell">
-        <div class="project-overview">
-
-          <p class="text-left">This location is one of San Diego's newest luxury residencies. The structural concrete for this project required 167,000 ft&sup2 cast-in-place construction for a 10 level mid-rise condominium building.</p>
-
-        </div>
       </div>
     </div>
-  </section>
+
+    <div class="medium-6 large-8 cell">
+      <div class="project-overview">
+
+        <p class="text-left">
+          Alta 1919 is a new upscale mixed-use development located off the Pacific Coast Highwary in Downtown San Diego. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas obcaecati, ipsum, sequi accusamus saepe enim!
+        </p>
+
+      </div>
+    </div>
+  </div>
+</section>
