--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,8 +6,8 @@
 
   <div class="hero hero-bg-image">
     <div class="hero-content">
-      <h1 class="hero-title">Thunder-Jones</h1>
-      <h3 class="hero-title">Contracting Group, Inc</h3>
+      <h1 class="hero-title">Thunder Jones</h1>
+      <h3 class="hero-title">Contracting Group, Incorporated</h3>
       <p class="hero-description hide-for-small-only">Commercial and Structural Concrete Construction</p>
       <div class="hero-ctas">
         <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
@@ -33,14 +33,7 @@
     <div class="medium-6 large-4 cell">
       <h3>Providing Structural Concrete Construction Expertise to Southern California Since 1998</h3></div>
     <div class="medium-6 large-8 cell">
-      <p>Founded by Kevin Thunder and Brian Jones, Thunder-Jones Contracting (TJC) Group, Inc serves the southern California community with quality construction. TJC prides itself in friendly business practices, safe work zones, and specialization in tilt-up concrete
-        construction, cast-in-place walls and elevated decks, and slab on grade projects. With a combined 45 years of experience in the San Diego construction industry, Kevin and Brian have created a dynamic team to complete projects on time and above
-        standards.
-      </p>
-
-
-      <p>The team at TJC Contracting hopes to have an opportunity to work with you to accomplish your goals.</p>
-
+      <p>Thunder Jones is a structural concrete builder based in San Diego County.  We specialize in design-build parking structures and apartment/condominium/mulit-use construction.   We have worked with various industries including aerospace, pharmaceutical, hospitals, hotels, commercial/retail, and the military.  We have established a proven track record of safety, quality and timeliness on our projects.  Our employees are trained in the latest of equipment and methods to insure that safety of our employees and others that work around us is our top focus.</p>
     </div>
   </div>
 
@@ -185,46 +178,47 @@
       <hr>
     </div>
   </div>
+  <div class="media-object-section">
+    <h4>Thunder Jones Contracting Group, Incorporated was founded in 1999 by Brian Jones and Kevin Thunder.  Together, they have over 60 years experience in the San Diego construction industry.  Both Kevin and Brian are graduates of San Diego State University Civil Engineering School.  Kevin is a registered Professional Engineer.</h4>
+<!-- <<<<<<< HEAD -->
+    <!-- <h4 class="text-center">Brian Jones | Partner</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci
+      veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p> -->
+<!-- ======= -->
+    <!-- <h4 class="text-center">Brian Thunder | Partner</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repellendus, dignissimos autem molestias alias laboriosam. veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p> -->
+<!-- >>>>>>> origin/test-branchM -->
+
+  </div>
 
   <div class="grid-x grid-margin-x">
-    <div class="medium-12 large-12 cell-auto">
+    <div class="medium-6 large-6 cell-auto">
       <div class="media-object stack-for-small">
         <div class="media-object-section">
           <div class="thumbnail">
             <img src="../assets/img/brian-port.jpg">
           </div>
         </div>
-        <div class="media-object-section">
-<!-- <<<<<<< HEAD -->
-          <h4 class="text-center">Brian Jones | Partner</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci
-            veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
-<!-- ======= -->
-          <!-- <h4 class="text-center">Brian Thunder | Partner</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque repellendus, dignissimos autem molestias alias laboriosam. veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p> -->
-<!-- >>>>>>> origin/test-branchM -->
-
-        </div>
       </div>
     </div>
-    <div class="medium-12 large-12 cell-auto">
+    <div class="medium-6 large-6 cell-auto">
       <div class="media-object stack-for-small">
         <div class="media-object-section">
           <div class="thumbnail">
             <img src="../assets/img/uncle_cropped.jpg">
           </div>
         </div>
-        <div class="media-object-section">
+        <!-- <div class="media-object-section"> -->
 <!-- <<<<<<< HEAD -->
-          <h4 class="text-center">Kevin Thunder | Partner</h4>
+          <!-- <h4 class="text-center">Kevin Thunder | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium error
-            adipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
+            adipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p> -->
 <!-- ======= -->
           <!-- <h4 class="text-center">Kevin Jones | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci Lorem ipsum dolor sit.</p> -->
 <!-- >>>>>>> origin/test-branchM -->
 
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
