scaffold, content and style updates
scaffold, content and style updates

--- a/src/pages/project4_vista.html
+++ b/src/pages/project4_vista.html
@@ -90,11 +90,11 @@
         <div class="project-spec">
 
           <ul class="no-bullet">
-            <li><i class="fa fa-user"></i>Client: <a href="http://www.vistacommunityclinic.org/locations/" target="_blank">Vista Community Medical Center</a></li>
+            <li><i class="fa fa-user"></i>Project: <a href="http://www.vistacommunityclinic.org/locations/" target="_blank">Vista Community Medical Center</a></li>
 
             <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
-            <li><i class="fa fa-arrows-alt"></i> Surface Area: 167,000 ft&sup2</li>
+            <li><i class="fa fa-arrows-alt"></i> Project Info: 167,000 ft&sup2</li>
 
             <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
             <br>
