--- a/src/pages/project5_water.html
+++ b/src/pages/project5_water.html
@@ -91,13 +91,13 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://wateroflifecc.org/" target="_blank">Water of Life Community Church</a></li>
+          <li><i class="fa fa-user"></i>Project: <a href="http://wateroflifecc.org/" target="_blank">Water of Life Community Church</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
           <li><i class="fa fa-arrows-alt"></i> Surface Area: 167,000 ft&sup2</li>
 
-          <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
+          <li><i class="fa fa-calendar"></i> Project Info: 2016</li>
           <br>
 
         </ul>
