--- a/src/pages/project7_pac.html
+++ b/src/pages/project7_pac.html
@@ -91,11 +91,11 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://pacificstationcondos.com" target="_blank">Pacific Station</a></li>
+          <li><i class="fa fa-user"></i>Project: <a href="http://pacificstationcondos.com" target="_blank">Pacific Station</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: Encinitas, CA</li>
 
-          <li><i class="fa fa-arrows-alt"></i> Surface Area: 205,000 ft&sup2</li>
+          <li><i class="fa fa-arrows-alt"></i> Project Info: 205,000 ft&sup2</li>
 
           <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
           <br>
