--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,11 +40,9 @@
       </p>
 
       <p>The team at TJC Contracting hopes to have an opportunity to work with you to accomplish your goals.</p>
-
-
     </div>
   </div>
-
+</section>
 <!-- projects section -->
 
 <section id="projects" data-magellan-target="projects">
@@ -58,7 +56,6 @@
 <!-- our team section -->
 
 <section id="team" data-magellan-target="team">
-
   <div class="grid-x">
     <div class="medium-12 cell">
       <h3 class="text-center">Our Team</h3>
@@ -66,39 +63,9 @@
     </div>
   </div>
 
-  <div class="grid-x grid-margin-x">
-    <div class="medium-12 large-12 cell-auto">
-      <div class="media-object stack-for-small">
-        <div class="media-object-section">
-          <div class="thumbnail">
-            <img src="../assets/img/brian-port.jpg">
-          </div>
-        </div>
-        <div class="media-object-section">
 
-          <h4 class="text-center">Brian Jones | Partner</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci
-            veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
-        </div>
-      </div>
-    </div>
-    <div class="medium-12 large-12 cell-auto">
-      <div class="media-object stack-for-small">
-        <div class="media-object-section">
-          <div class="thumbnail">
-            <img src="../assets/img/uncle_cropped.jpg">
-          </div>
-        </div>
-        <div class="media-object-section">
 
-          <h4 class="text-center">Kevin Thunder | Partner</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium error
-            adipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 <!-- /our team section -->
 
