--- a/src/pages/project2_tc.html
+++ b/src/pages/project2_tc.html
@@ -90,11 +90,11 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="https://www.destinationhotels.com/town-country" target="_blank">Town & Country Hotel</a></li>
+          <li><i class="fa fa-user"></i>Project: <a href="https://www.destinationhotels.com/town-country" target="_blank">Town & Country Hotel</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
-          <li><i class="fa fa-arrows-alt"></i> Surface Area: 30,000 ft&sup2</li>
+          <li><i class="fa fa-arrows-alt"></i> Project Info: 30,000 ft&sup2</li>
 
           <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
           <br>
