--- a/src/pages/project3_broad.html
+++ b/src/pages/project3_broad.html
@@ -92,11 +92,11 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="http://broadstonelittleitaly.com/" target="_blank">Broadstone Little Italy</a></li>
+          <li><i class="fa fa-user"></i>Project: <a href="http://broadstonelittleitaly.com/" target="_blank">Broadstone Little Italy</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
-          <li><i class="fa fa-arrows-alt"></i> Surface Area: 218,000 ft&sup2</li>
+          <li><i class="fa fa-arrows-alt"></i> Project Info: 218,000 ft&sup2</li>
 
           <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
           <br>
