--- a/src/pages/project6_military.html
+++ b/src/pages/project6_military.html
@@ -91,11 +91,11 @@
       <div class="project-spec">
 
         <ul class="no-bullet">
-          <li><i class="fa fa-user"></i>Client: <a href="#" target="_blank">Military Fitness Center</a></li>
+          <li><i class="fa fa-user"></i>Project: <a href="#" target="_blank">Military Fitness Center</a></li>
 
           <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
 
-          <li><i class="fa fa-arrows-alt"></i> Surface Area: 167,000 ft&sup2</li>
+          <li><i class="fa fa-arrows-alt"></i> Project Info: 167,000 ft&sup2</li>
 
           <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
           <br>
