added logo elements and update styles in footer and off canvas
logo elements

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,7 @@
       <h3 class="hero-title">Contracting Group, Incorporated</h3>
       <p class="hero-description hide-for-small-only">Commercial Structural Concrete </p>
       <div class="hero-ctas">
-        <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
+        <a href="#projects" class="hero-section-cta button" data-smooth-scroll id="hero-project-button">Projects</a>
         <a href="#contact" class="hero-section-cta button" data-smooth-scroll>Contact</a>
       </div>
     </div>
