--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -61,29 +61,24 @@
       <h3 class="text-center">Our Team</h3>
       <hr>
     </div>
+  </div>
 
   <div class="grid-x bio">
-    <div class="medium-12 cell">
-      <img id="bio-photo" src="../assets/img/team_hero_cropped.jpg" alt="team-photo">
+    <div id="bio-photo" class="medium-12 cell">
+      <img src="../assets/img/team_hero_cropped.jpg" alt="team-photo">
     </div>
 
     <div class="small-12 medium-6 large-6 cell bio-left">
-      <h2 class="bio-name">Thunder</h2>
+      <h3 class="bio-name">Brian Jones | Partner</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
     </div>
     <div class="small-12 medium-6 large-6 cell bio-right">
-      <h2 class="bio-name">Jones</h2>
+      <h3 class="bio-name">Kevin Thunder | Partner</h3>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
       </p>
 
     </div>
-
   </div>
-
-  </div>
-
-
-
 
 </section>
 <!-- /our team section -->
